[package]
name = "tokeiya3_chronograph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
rand_xorshift = "*"

[dependencies]
lockfree_snowflake={path = "../lockfree_snowflake"}
once_cell = "*"
chrono = "*"
rand_core = "0.6.4"

